--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "dev": "npx tsx watch src/server.ts",
     "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex"
   },
@@ -13,14 +13,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.8.9",
+    "@types/supertest": "^2.0.15",
+    "supertest": "^6.3.3",
     "tsx": "^3.14.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   },
   "dependencies": {
     "@fastify/cookie": "^9.1.0",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "knex": "^3.0.1",
+    "mocha": "^10.2.0",
     "sqlite": "^5.0.1",
     "sqlite3": "^5.1.6",
     "zod": "^3.22.4"
